--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="no-js" lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -65,6 +66,10 @@
             <h2>SQA ENGINEER | MANUAL TESTER | AUTOMATION TESTER</h2>
             <a href="https://drive.google.com/file/d/1GiWJr0oo7kZH2ejmZHCy2Kn4ka5HHJBM/view?usp=sharing"
                class="btn-rounded-white">Download Resume</a>
+            <div class="contact-info">
+                <p class="contact-item">📞 +880-1612425150</p>
+                <p class="contact-item">📧 mdasadul.qa@gmail.com</p>
+            </div>
         </div>
         <div id="lead-overlay"></div>
         <div id="lead-down">
@@ -159,7 +164,7 @@
         </div>
     </div>
 
-    <div id="education" class="edu">
+    <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Khwaja Yunus Ali University</h3>
@@ -271,7 +276,7 @@
         </a>
       </div>
       <div class="project-card">
-        <h3>Automation Testing Project</h3>
+        <h3>Automation Testing project</h3>
         <a href="https://github.com/asadulqa/webautomationproject" target="_blank">
           <i class="fa fa-github-square"></i> View on GitHub
         </a>
