--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="no-js" lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -58,7 +59,7 @@
 
     <div id="lead">
         <div class="profile-container">
-  <img src="images/profile.png" alt="Profile Picture" class="profile-pic">
+<!--  <img src="images/profile.png" alt="Profile Picture" class="profile-pic">-->
 </div>
 
         <div id="lead-content">
