--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>Khwaja Yunus Ali University</h3>
+            <h3>Belkuchi Government Degree College</h3>
             <span class="education-date">02/2019- 02/2023</span>
-            <h4>Bsc in CSE</h4>
+            <h4>Bss</h4>
         </div>
 
         <div class="education-block">
