--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div id="lead-content">
             <h1>ASADUL HAQUE</h1>
             <h2>SQA ENGINEER | MANUAL TESTER | AUTOMATION TESTER</h2>
-            <a href="https://drive.google.com/file/d/1YpaPEMF67PW3K0gZtoX6M7ccym24W0Bm/view?usp=sharing"
+            <a href="https://drive.google.com/file/d/11NUPTSJYM_ptYRQl32igosh5XVOsBTaD/view?usp=sharing"
                class="btn-rounded-white">Download Resume</a>
             <div class="contact-info">
                 <p class="contact-item">📞 +880-1612425150</p>
@@ -138,7 +138,7 @@
             </div>
 
             <div data-date="11/2023 - 08/2024">
-                <h3>Aroggo(Contract)</h3>
+                <h3>Xenobit(Contract)</h3>
                 <h4>SQA Engineer</h4>
                 <ul>
                     <li>Contribute to product quality improvement through ongoing initiatives.</li>
